# proyecto-final-criptografia

./: .gitignore  README.md  install_linux.sh  install_macos.sh  install_windows.bat  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: reporte-de-error.md  solicitud-de-mejora.md
app/: address.py  keystore.py  main.py  signer.py  tx.py  utils.py  verifier.py
docs/: app.address.html  app.html  app.keystore.html  app.main.html  app.signer.html  app.tx.html  app.utils.html  app.verifier.html  index.html
tests/: test_address.py  test_keystore.py  test_signer.py  test_tx.py  test_utils.py  test_verifier.py
